Fix the card alignment issue

--- a/app/assets/stylesheets/cards.scss
+++ b/app/assets/stylesheets/cards.scss
@@ -5,25 +5,30 @@
 
 .cards {
   background-color: white;
-  .search-results{
+  .search-results {
     padding: 30px 15px 10px;
     @media #{$media-pad-larger}{
       max-width: 1240px;
       margin: 0 auto;
     }
-    .card-wrapper{
-      //height:340px;
+    .card-wrapper {
+      margin-bottom: -60px;
+      @media #{$media-pad-smaller}{
+        margin-bottom: -80px;
+      }
       .card-item {
-        //max-width: 400px;
         text-align: left;
-        margin: 0 auto;
         background-color: #fff;
         position: relative;
         cursor: pointer;
-
+        margin-lfet: auto;
+        margin-right: auto;
+        margin-bottom: -60px;
+        @media #{$media-pad-smaller}{
+          margin-bottom: -80px;
+        }
         .item-bg {
-          width:100%;
-          //height: 250px;
+          width: 100%;
         }
         .name {
           position: relative;
@@ -32,7 +37,7 @@
           color: white;
           font-size: 18px;
           font-weight: 700;
-          background-color: rgba(0,0,0, 0.5);
+          background-color: rgba(0, 0, 0, 0.5);
           padding-top: 5px;
           padding-bottom: 10px;
         }
@@ -81,7 +86,7 @@
 
           .vehicle {
             margin-right: 10px;
-            font-size:14px;
+            font-size: 14px;
           }
         }
         .avatar {
@@ -101,9 +106,6 @@
       }
     }
   }
-
-
-
 
   .hvr-float {
     display: inline-block;
